deploy/minikube/resources/minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: telemetry
spec:
  type: ExternalName
  externalName: truenas.lan
