deploy/minikube/resources/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  labels:
    name: prometheus-ingress
spec:
  rules:
    - host: prometheus.minikube.lan
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus
                port:
                  name: web
